--- a/docs/style.css
+++ b/docs/style.css
@@ -90,6 +90,13 @@ header h1 {
     height: 300px;
 }
 
+/* Map styles */
+#map {
+    width: 100%;
+    height: 500px;
+    margin-bottom: 2rem;
+}
+
 /* Table styles */
 .table-container {
     background: white;
