--- a/docs/style.css
+++ b/docs/style.css
@@ -67,7 +67,8 @@ header h1 {
 }
 
 /* Chart container */
-.chart-container {
+.chart-container,
+.chart-container-trend {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: 2rem;
